[package]
name = "mecha-wifi-ctrl"
version = "0.2.5"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Tokio-based runtimes for communicating with hostapd and wpa-supplicant"
license = "Apache-2.0"
repository = "https://github.com/novalabsxyz/wifi-ctrl"
readme = "README.md"
keywords = ["hostapd", "wpa-supplicant", "wpa_supplicant", "wpa-cli", "wifi"]

[dependencies]
config = {version="0", default-features = false, features = ["ini"]}
log = { version = "0" }
serde =  {version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util"] }
env_logger = "0"
network-interface = "1.1.1"
wifi-ctrl = "0.2.4"
futures = "0"
tokio-util  ={ version = "0", features = ["codec"] }

[dev-dependencies]
env_logger = "0"
network-interface = "1"


